Fix card works container align

--- a/style.css
+++ b/style.css
@@ -337,6 +337,7 @@ body {
 #card-works-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .card-works {
